--- a/3_Analisis_estadistico_de_senales/parte2.ipynb
+++ b/3_Analisis_estadistico_de_senales/parte2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +174,12 @@
     "    for canal in range(len(avrg_energy)): \n",
     "        datos[f'canal {canal+1}'].append(avrg_energy[canal])\n",
     "df_control=pd.DataFrame(datos)\n",
-    "print(df_control)"
+    "print(df_control) #nombrar los canales como los electrodos?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +257,155 @@
    "source": [
     "3. Determine si existe diferencia estadística significativa entre canales de cada grupo de sujetos a través de una prueba t. Compruebe los supuestos necesarios par realizar una prueba t, esto es: normalidad de la variable, independencia (se asume que los grupos son independientes) y homocedasticidad (use una prueba de Levene), finalmente realice la prueba t para determinar si existen diferencias entre los canales entre grupos de sujetos. De no cumplirse los requisitos, realice entonces un análisis no paramétrico (prueba U de Mann-Whitney). Este numeral tiene como objetivo identificar los canales que entregan información diferencial entre pacientes sanos y con enfermedad de parkinson."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convertir datos continuos\n",
+    "#control\n",
+    "control_continuo=[]\n",
+    "for i in control:\n",
+    "    control_continuo.append(np.reshape(i,(i.shape[0],i.shape[1]*i.shape[2]),order='F'))\n",
+    "#parkinson\n",
+    "parkinson_continuo=[]\n",
+    "for i in parkinson:\n",
+    "    parkinson_continuo.append(np.reshape(i,(i.shape[0],i.shape[1]*i.shape[2]),order='F'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#librerias\n",
+    "from scipy import stats\n",
+    "#valor significancia\n",
+    "alpha=0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supuesto de normalidad para controles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prueba de normallidad en controles. Ciertamente, no siguen esta distribución.\n",
+    "p_values_for_channels=[]\n",
+    "for i in control_continuo:\n",
+    "    result=np.apply_along_axis(stats.normaltest,1,i) #[statistic,pvalue]\n",
+    "    pval=result[:,1] #toma sólo los pvalues\n",
+    "    p_values_for_channels.append(pval) #lista con los pvalues de cada canal para cada sujeto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ninguno de los canales de los controles sigue una distribución normal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#codigo para comprobar normalidad bajo la suposición que ninguno dsitribuye normal\n",
+    "normality_results = []\n",
+    "for p_values in p_values_for_channels:\n",
+    "    any_normal = any(p >= alpha for p in p_values)\n",
+    "    normality_results.append(any_normal)\n",
+    "if any(normality_results):\n",
+    "    print(\"Al menos uno de los canales de los controles sigue una distribución normal.\")\n",
+    "else:\n",
+    "    print(\"Ninguno de los canales de los controles sigue una distribución normal.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supuesto de normalidad para sujetos con parkinson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prueba de normallidad en parkinson. Ciertamente, no siguen esta distribución.\n",
+    "p_values_for_channels=[]\n",
+    "for i in parkinson_continuo:\n",
+    "    result=np.apply_along_axis(stats.normaltest,1,i) #[statistic,pvalue]\n",
+    "    pval=result[:,1] #toma sólo los pvalues\n",
+    "    p_values_for_channels.append(pval) #lista con los pvalues de cada canal para cada sujeto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ninguno de los canales de parkinson sigue una distribución normal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#codigo para comprobar normalidad bajo la suposición que ninguno dsitribuye normal\n",
+    "normality_results = []\n",
+    "for p_values in p_values_for_channels:\n",
+    "    any_normal = any(p >= alpha for p in p_values)\n",
+    "    normality_results.append(any_normal)\n",
+    "if any(normality_results):\n",
+    "    print(\"Al menos uno de los canales de parkinson sigue una distribución normal.\")\n",
+    "else:\n",
+    "    print(\"Ninguno de los canales de parkinson sigue una distribución normal.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supuesto de homocedasticidad para controles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supuesto de homocedasticidad para sujetos con parkinson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
