--- a/3_Analisis_estadistico_de_senales/parte2.ipynb
+++ b/3_Analisis_estadistico_de_senales/parte2.ipynb
@@ -83,6 +83,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MATEO\\AppData\\Local\\Temp\\ipykernel_17444\\1517922791.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -260,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -388,10 +402,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Al menos un canal en el grupo de controles no cumple con el supuesto de homocedasticidad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Homocedasticidad en controles\n",
+    "homoscedasticity_results_control = []\n",
+    "for subject_data in control_continuo:\n",
+    "    statistic, pvalue = stats.levene(*subject_data)\n",
+    "    if pvalue > alpha:\n",
+    "        homoscedasticity_results_control.append(True)\n",
+    "    else:\n",
+    "        homoscedasticity_results_control.append(False)\n",
+    "\n",
+    "if all(homoscedasticity_results_control):\n",
+    "    print(\"Todos los canales en el grupo de controles cumplen con el supuesto de homocedasticidad.\")\n",
+    "else:\n",
+    "    print(\"Al menos un canal en el grupo de controles no cumple con el supuesto de homocedasticidad.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los siguientes canales en el grupo de controles no cumplen con el supuesto de homocedasticidad: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identificar canales que no cumplen con homocedasticidad en controles\n",
+    "channels_without_homoscedasticity_control = []\n",
+    "for idx, subject_data in enumerate(control_continuo):\n",
+    "    statistic, pvalue = stats.levene(*subject_data)\n",
+    "    if pvalue <= alpha:\n",
+    "        channels_without_homoscedasticity_control.append(idx + 1)  # Sumar 1 para obtener el número de canal\n",
+    "\n",
+    "if len(channels_without_homoscedasticity_control) > 0:\n",
+    "    print(\"Los siguientes canales en el grupo de controles no cumplen con el supuesto de homocedasticidad:\", channels_without_homoscedasticity_control)\n",
+    "else:\n",
+    "    print(\"Todos los canales en el grupo de controles cumplen con el supuesto de homocedasticidad.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,10 +465,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Al menos un canal en el grupo de sujetos con Parkinson no cumple con el supuesto de homocedasticidad.\n",
+      "0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Homocedasticidad en parkinson\n",
+    "homoscedasticity_results_parkinson = []\n",
+    "for subject_data in parkinson_continuo:\n",
+    "    statistic, pvalue = stats.levene(*subject_data)\n",
+    "    if pvalue > alpha:\n",
+    "        homoscedasticity_results_parkinson.append(True)\n",
+    "    else:\n",
+    "        homoscedasticity_results_parkinson.append(False)\n",
+    "\n",
+    "if all(homoscedasticity_results_parkinson):\n",
+    "    print(\"Todos los canales en el grupo de sujetos con Parkinson cumplen con el supuesto de homocedasticidad.\")\n",
+    "else:\n",
+    "    print(\"Al menos un canal en el grupo de sujetos con Parkinson no cumple con el supuesto de homocedasticidad.\")\n",
+    "print (alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los siguientes canales en el grupo de sujetos con Parkinson no cumplen con el supuesto de homocedasticidad: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identificar canales que no cumplen con homocedasticidad en parkinson\n",
+    "channels_without_homoscedasticity_parkinson = []\n",
+    "for idx, subject_data in enumerate(parkinson_continuo):\n",
+    "    statistic, pvalue = stats.levene(*subject_data)\n",
+    "    if pvalue <= alpha:\n",
+    "        channels_without_homoscedasticity_parkinson.append(idx + 1)  # Sumar 1 para obtener el número de canal\n",
+    "\n",
+    "if len(channels_without_homoscedasticity_parkinson) > 0:\n",
+    "    print(\"Los siguientes canales en el grupo de sujetos con Parkinson no cumplen con el supuesto de homocedasticidad:\", channels_without_homoscedasticity_parkinson)\n",
+    "else:\n",
+    "    print(\"Todos los canales en el grupo de sujetos con Parkinson cumplen con el supuesto de homocedasticidad.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prueba de Mann-Whitney para controles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No existe diferencia estadística entre los canales 1 y 2 en el grupo de controles.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prueba de Mann-Whitney para controles\n",
+    "statistic, pvalue = stats.mannwhitneyu(df_control['canal 1'], df_control['canal 2'])\n",
+    "if pvalue < alpha:\n",
+    "    print(\"Existe diferencia estadística entre los canales 1 y 2 en el grupo de controles.\")\n",
+    "else:\n",
+    "    print(\"No existe diferencia estadística entre los canales 1 y 2 en el grupo de controles.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prueba de Mann-Whitney para sujetos con Parkinson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No existe diferencia estadística entre los canales 1 y 2 en el grupo de sujetos con Parkinson.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prueba de Mann-Whitney para parkinson\n",
+    "statistic, pvalue = stats.mannwhitneyu(df_parkinson['canal 1'], df_parkinson['canal 2'])\n",
+    "if pvalue < alpha:\n",
+    "    print(\"Existe diferencia estadística entre los canales 1 y 2 en el grupo de sujetos con Parkinson.\")\n",
+    "else:\n",
+    "    print(\"No existe diferencia estadística entre los canales 1 y 2 en el grupo de sujetos con Parkinson.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análisis: ## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Ninguno de los canales tanto en el grupo de controles como en el grupo de sujetos con Parkinson sigue una distribución normal. Esto sugiere que las muestras no provienen de una población con una distribución normal. En el grupo de controles, al menos un canal no cumple con el supuesto de homocedasticidad, lo que significa que las varianzas de los canales pueden ser significativamente diferentes. De manera similar, en el grupo de sujetos con Parkinson, al menos un canal tampoco cumple con el supuesto de homocedasticidad, lo que indica que las varianzas de los canales en este grupo pueden ser distintas entre sí, debido a que La homocedasticidad se refiere a la igualdad de varianzas entre los grupos que se están comparando. Si al menos un canal en el grupo de control y otro canal en el grupo de sujetos con Parkinson no cumplen con el supuesto de homocedasticidad, entonces no se puede afirmar que los grupos tienen varianzas iguales de forma general.. Por ultimo en la prueba de Mann-Whitney no se encontró una diferencia estadística significativa entre los canales 1 y 2 tanto en el grupo de controles como en el grupo de sujetos con Parkinson. Esto sugiere que estos dos canales específicos no proporcionan información diferencial entre los grupos de sujetos sanos y aquellos con enfermedad de Parkinson en términos de energía.\n",
+    "Esto nos podría sugerir, profe, que, los resultados indican que las señales de EEG de los canales evaluados no presentan diferencias significativas entre los grupos de controles y sujetos con Parkinson en términos de energía. Además, la falta de normalidad y homocedasticidad en los datos puede influir en la confiabilidad de los análisis estadísticos realizados."
+   ]
   }
  ],
  "metadata": {
@@ -424,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4,
   "vscode": {
