--- a/Proyecto/Seguimiento_2/seguimiento_2.ipynb
+++ b/Proyecto/Seguimiento_2/seguimiento_2.ipynb
@@ -264,6 +264,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A continuación se realizarán los numerales 4 y 5. \n",
+    "\n",
+    "4. Corrección seguimiento 1 y análisis exploratorio\n",
+    "Aplicar los métodos de análisis del seguimiento 1 y presentar el Análisis Exploratorio de los datos obtenidos en el punto 3 (20%)\n",
+    "\n",
+    "5. Presentación de informe , discusión y conclusiones\n",
+    "Realizar un informe que incluya el desarrollo de todos los puntos desarrollados con su respectivo análisis. Discutir los resultados a la luz de lo obtenido en el proyecto 1 (20%)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
